add new contact type and adjustments in stacks

--- a/public/index.html
+++ b/public/index.html
@@ -1006,45 +1006,45 @@
           <div
             class="tech-item group bg-white/5 backdrop-blur-sm p-6 rounded-2xl text-center hover:bg-accent-500/20 hover:-translate-y-3 transition-all duration-500 border border-white/10 hover:border-accent-400/50 hover:shadow-2xl hover:shadow-accent-400/20">
             <div
-              class="text-2xl lg:text-5xl mb-4 group-hover:scale-110 transition-transform duration-300">
+              class="tech-icon-container">
               <img
                 src="./assets/images/icons/htmlcssjs.png"
                 alt="HTML + CSS + JS" />
             </div>
             <div
-              class="text-sm font-medium text-primary-100 group-hover:text-white transition-colors">HTML5/CSS3</div>
+              class="tech-title text-sm font-medium text-primary-100 group-hover:text-white transition-colors">HTML5/CSS3</div>
             <div
-              class="text-xs text-primary-300 mt-1 opacity-0 group-hover:opacity-100 transition-opacity">Frontend
+              class="tech-subtitle text-xs text-primary-300 mt-1 opacity-0 group-hover:opacity-100 transition-opacity">Frontend
               Base</div>
           </div>
 
           <div
             class="tech-item group bg-white/5 backdrop-blur-sm p-6 rounded-2xl text-center hover:bg-accent-500/20 hover:-translate-y-3 transition-all duration-500 border border-white/10 hover:border-accent-400/50 hover:shadow-2xl hover:shadow-accent-400/20">
             <div
-              class="text-2xl lg:text-5xl mb-4 group-hover:scale-110 transition-transform duration-300">
+              class="tech-icon-container">
               <img
                 src="./assets/images/icons/tailwindcss.png"
                 alt="TailswindCSS" />
             </div>
             <div
-              class="text-sm font-medium text-primary-100 group-hover:text-white transition-colors">TailwindCSS</div>
+              class="tech-title text-sm font-medium text-primary-100 group-hover:text-white transition-colors">TailwindCSS</div>
             <div
-              class="text-xs text-primary-300 mt-1 opacity-0 group-hover:opacity-100 transition-opacity">Design
+              class="tech-subtitle text-xs text-primary-300 mt-1 opacity-0 group-hover:opacity-100 transition-opacity">Design
               System</div>
           </div>
 
           <div
             class="tech-item group bg-white/5 backdrop-blur-sm p-6 rounded-2xl text-center hover:bg-accent-500/20 hover:-translate-y-3 transition-all duration-500 border border-white/10 hover:border-accent-400/50 hover:shadow-2xl hover:shadow-accent-400/20">
             <div
-              class="text-2xl lg:text-5xl mb-4 group-hover:scale-110 transition-transform duration-300">
+              class="tech-icon-container">
               <img
                 src="./assets/images/icons/react.png"
                 alt="React" />
             </div>
             <div
-              class="text-sm font-medium text-primary-100 group-hover:text-white transition-colors">React</div>
+              class="tech-title text-sm font-medium text-primary-100 group-hover:text-white transition-colors">React</div>
             <div
-              class="text-xs text-primary-300 mt-1 opacity-0 group-hover:opacity-100 transition-opacity">UI
+              class="tech-subtitle text-xs text-primary-300 mt-1 opacity-0 group-hover:opacity-100 transition-opacity">UI
               Framework</div>
           </div>
 
@@ -1052,45 +1052,45 @@
           <div
             class="tech-item group bg-white/5 backdrop-blur-sm p-6 rounded-2xl text-center hover:bg-highlight-500/20 hover:-translate-y-3 transition-all duration-500 border border-white/10 hover:border-highlight-400/50 hover:shadow-2xl hover:shadow-highlight-400/20">
             <div
-              class="text-2xl lg:text-5xl mb-4 group-hover:scale-110 transition-transform duration-300">
+              class="tech-icon-container">
               <img
                 src="./assets/images/icons/php.png"
                 alt="PHP" />
             </div>
             <div
-              class="text-sm font-medium text-primary-100 group-hover:text-white transition-colors">PHP</div>
+              class="tech-title text-sm font-medium text-primary-100 group-hover:text-white transition-colors">PHP</div>
             <div
-              class="text-xs text-primary-300 mt-1 opacity-0 group-hover:opacity-100 transition-opacity">Backend
+              class="tech-subtitle text-xs text-primary-300 mt-1 opacity-0 group-hover:opacity-100 transition-opacity">Backend
               Robusto</div>
           </div>
 
           <div
             class="tech-item group bg-white/5 backdrop-blur-sm p-6 rounded-2xl text-center hover:bg-accent-500/20 hover:-translate-y-3 transition-all duration-500 border border-white/10 hover:border-accent-400/50 hover:shadow-2xl hover:shadow-accent-400/20">
             <div
-              class="text-2xl lg:text-5xl mb-4 group-hover:scale-110 transition-transform duration-300">
+              class="tech-icon-container">
               <img
                 src="./assets/images/icons/python.png"
                 alt="Python" />
             </div>
             <div
-              class="text-sm font-medium text-primary-100 group-hover:text-white transition-colors">Python</div>
+              class="tech-title text-sm font-medium text-primary-100 group-hover:text-white transition-colors">Python</div>
             <div
-              class="text-xs text-primary-300 mt-1 opacity-0 group-hover:opacity-100 transition-opacity">IA
+              class="tech-subtitle text-xs text-primary-300 mt-1 opacity-0 group-hover:opacity-100 transition-opacity">IA
               & Automação</div>
           </div>
 
           <div
             class="tech-item group bg-white/5 backdrop-blur-sm p-6 rounded-2xl text-center hover:bg-highlight-500/20 hover:-translate-y-3 transition-all duration-500 border border-white/10 hover:border-highlight-400/50 hover:shadow-2xl hover:shadow-highlight-400/20">
             <div
-              class="text-2xl lg:text-5xl mb-4 group-hover:scale-110 transition-transform duration-300">
+              class="tech-icon-container">
               <img
                 src="./assets/images/icons/mysql.png"
                 alt="MySQL" />
             </div>
             <div
-              class="text-sm font-medium text-primary-100 group-hover:text-white transition-colors">MySQL</div>
+              class="tech-title text-sm font-medium text-primary-100 group-hover:text-white transition-colors">MySQL</div>
             <div
-              class="text-xs text-primary-300 mt-1 opacity-0 group-hover:opacity-100 transition-opacity">Base
+              class="tech-subtitle text-xs text-primary-300 mt-1 opacity-0 group-hover:opacity-100 transition-opacity">Base
               de Dados</div>
           </div>
 
@@ -1098,30 +1098,30 @@
           <div
             class="tech-item group bg-white/5 backdrop-blur-sm p-6 rounded-2xl text-center hover:bg-accent-500/20 hover:-translate-y-3 transition-all duration-500 border border-white/10 hover:border-accent-400/50 hover:shadow-2xl hover:shadow-accent-400/20">
             <div
-              class="text-2xl lg:text-5xl mb-4 group-hover:scale-110 transition-transform duration-300">
+              class="tech-icon-container">
               <img
                 src="./assets/images/icons/flutter.png"
                 alt="Flutter" />
             </div>
             <div
-              class="text-sm font-medium text-primary-100 group-hover:text-white transition-colors">Flutter</div>
+              class="tech-title text-sm font-medium text-primary-100 group-hover:text-white transition-colors">Flutter</div>
             <div
-              class="text-xs text-primary-300 mt-1 opacity-0 group-hover:opacity-100 transition-opacity">Apps
+              class="tech-subtitle text-xs text-primary-300 mt-1 opacity-0 group-hover:opacity-100 transition-opacity">Apps
               Mobile</div>
           </div>
 
           <div
             class="tech-item group bg-white/5 backdrop-blur-sm p-6 rounded-2xl text-center hover:bg-highlight-500/20 hover:-translate-y-3 transition-all duration-500 border border-white/10 hover:border-highlight-400/50 hover:shadow-2xl hover:shadow-highlight-400/20">
             <div
-              class="text-2xl lg:text-5xl mb-4 group-hover:scale-110 transition-transform duration-300">
+              class="tech-icon-container">
               <img
                 src="./assets/images/icons/firebase.png"
                 alt="Firebase" />
             </div>
             <div
-              class="text-sm font-medium text-primary-100 group-hover:text-white transition-colors">Firebase</div>
+              class="tech-title text-sm font-medium text-primary-100 group-hover:text-white transition-colors">Firebase</div>
             <div
-              class="text-xs text-primary-300 mt-1 opacity-0 group-hover:opacity-100 transition-opacity">Real-time
+              class="tech-subtitle text-xs text-primary-300 mt-1 opacity-0 group-hover:opacity-100 transition-opacity">Real-time
               DB</div>
           </div>
 
@@ -1129,62 +1129,63 @@
           <div
             class="tech-item group bg-white/5 backdrop-blur-sm p-6 rounded-2xl text-center hover:bg-highlight-500/20 hover:-translate-y-3 transition-all duration-500 border border-white/10 hover:border-highlight-400/50 hover:shadow-2xl hover:shadow-highlight-400/20">
             <div
-              class="text-2xl lg:text-5xl mb-4 group-hover:scale-110 transition-transform duration-300">
+              class="tech-icon-container">
               <img
                 src="./assets/images/icons/IA.png"
                 alt="IA" />
             </div>
             <div
-              class="text-sm font-medium text-primary-100 group-hover:text-white transition-colors">Inteligência Artificial</div>
+              class="tech-title text-sm font-medium text-primary-100 group-hover:text-white transition-colors">Inteligência
+              Artificial</div>
             <div
-              class="text-xs text-primary-300 mt-1 opacity-0 group-hover:opacity-100 transition-opacity">IA
+              class="tech-subtitle text-xs text-primary-300 mt-1 opacity-0 group-hover:opacity-100 transition-opacity">IA
               Integrada</div>
           </div>
 
           <div
             class="tech-item group bg-white/5 backdrop-blur-sm p-6 rounded-2xl text-center hover:bg-accent-500/20 hover:-translate-y-3 transition-all duration-500 border border-white/10 hover:border-accent-400/50 hover:shadow-2xl hover:shadow-accent-400/20">
             <div
-              class="text-2xl lg:text-5xl mb-4 group-hover:scale-110 transition-transform duration-300">
+              class="tech-icon-container">
               <img
                 src="./assets/images/icons/google.png"
                 alt="Google" />
             </div>
             <div
-              class="text-sm font-medium text-primary-100 group-hover:text-white transition-colors">Google
+              class="tech-title text-sm font-medium text-primary-100 group-hover:text-white transition-colors">Google
               Workspace</div>
             <div
-              class="text-xs text-primary-300 mt-1 opacity-0 group-hover:opacity-100 transition-opacity">Email
+              class="tech-subtitle text-xs text-primary-300 mt-1 opacity-0 group-hover:opacity-100 transition-opacity">Email
               Profissional</div>
           </div>
 
           <div
             class="tech-item group bg-white/5 backdrop-blur-sm p-6 rounded-2xl text-center hover:bg-accent-500/20 hover:-translate-y-3 transition-all duration-500 border border-white/10 hover:border-accent-400/50 hover:shadow-2xl hover:shadow-accent-400/20">
             <div
-              class="text-2xl lg:text-5xl mb-4 group-hover:scale-110 transition-transform duration-300">
+              class="tech-icon-container">
               <img
                 src="./assets/images/icons/cloud.png"
                 alt="Cloud" />
             </div>
             <div
-              class="text-sm font-medium text-primary-100 group-hover:text-white transition-colors">Cloud
+              class="tech-title text-sm font-medium text-primary-100 group-hover:text-white transition-colors">Cloud
               Hosting</div>
             <div
-              class="text-xs text-primary-300 mt-1 opacity-0 group-hover:opacity-100 transition-opacity">Infraestrutura</div>
+              class="tech-subtitle text-xs text-primary-300 mt-1 opacity-0 group-hover:opacity-100 transition-opacity">Infraestrutura</div>
           </div>
 
           <!-- Additional modern technologies -->
           <div
             class="tech-item group bg-white/5 backdrop-blur-sm p-6 rounded-2xl text-center hover:bg-highlight-500/20 hover:-translate-y-3 transition-all duration-500 border border-white/10 hover:border-highlight-400/50 hover:shadow-2xl hover:shadow-highlight-400/20">
             <div
-              class="text-2xl lg:text-5xl mb-4 group-hover:scale-110 transition-transform duration-300">
+              class="tech-icon-container">
               <img
                 src="./assets/images/icons/docker.png"
                 alt="Docker" />
             </div>
             <div
-              class="text-sm font-medium text-primary-100 group-hover:text-white transition-colors">Docker</div>
+              class="tech-title text-sm font-medium text-primary-100 group-hover:text-white transition-colors">Docker</div>
             <div
-              class="text-xs text-primary-300 mt-1 opacity-0 group-hover:opacity-100 transition-opacity">Containerização</div>
+              class="tech-subtitle text-xs text-primary-300 mt-1 opacity-0 group-hover:opacity-100 transition-opacity">Containerização</div>
           </div>
         </div>
 
@@ -1278,7 +1279,8 @@
           </a>
 
           <!-- Contact Methods Grid -->
-          <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-16">
+          <div
+            class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-16">
             <a href="mailto:contato@dharmalabs.com.br"
               class="group flex flex-col items-center p-8 bg-white/5 backdrop-blur-sm rounded-2xl hover:bg-accent-500/10 transition-all duration-300 border border-white/10 hover:border-accent-400/50 hover:-translate-y-2">
               <div
@@ -1290,7 +1292,7 @@
               <p class="text-primary-200 text-center mb-4">Resposta em até 2
                 horas</p>
               <span
-                class="text-lg font-medium group-hover:text-accent-400 transition-colors">contato@dharmalabs.com.br</span>
+                class="text-sm font-medium group-hover:text-accent-400 transition-colors">contato@dharmalabs.com.br</span>
             </a>
 
             <a href="https://wa.link/suwtio"
@@ -1307,6 +1309,21 @@
               <span
                 class="text-lg font-medium group-hover:text-highlight-400 transition-colors"
                 h>(17) 99144-6829</span>
+            </a>
+
+            <a href="https://instagram.com/dharmalabs" target="_blank"
+              rel="noopener noreferrer"
+              class="group flex flex-col items-center p-8 bg-white/5 backdrop-blur-sm rounded-2xl hover:bg-highlight-500/10 transition-all duration-300 border border-white/10 hover:border-highlight-400/50 hover:-translate-y-2">
+              <div
+                class="w-16 h-16 bg-highlight-500/20 rounded-2xl flex items-center justify-center mb-6 group-hover:scale-110 transition-transform duration-300">
+                <i
+                  class="fa-brands fa-instagram text-3xl text-pink-400 group-hover:-rotate-12 transition-transform duration-300"></i>
+              </div>
+              <h3 class="text-xl font-bold mb-3">Instagram</h3>
+              <p class="text-primary-200 text-center mb-4">Acompanhe nossos
+                projetos</p>
+              <span
+                class="text-lg font-medium group-hover:text-highlight-400 transition-colors">@dharmalabs</span>
             </a>
 
             <a
