remove details of services and toggle

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <title>Dharma Labs - Desenvolvimento Web com Propósito | Sites, Sistemas e
       Apps</title>
     <meta name="description"
-      content="Transformamos ideias em soluções digitais. Desenvolvimento de sites, sistemas web, dashboards, apps mobile e automação com IA. Tecnologia com propósito.">
+      content="Transformamos ideias em soluções digitais. Desenvolvimento de sites, sistemas web, dashboards, apps mobile e automação. Tecnologia com propósito.">
     <meta name="keywords"
       content="desenvolvimento web, criação de sites, sistemas web, apps mobile, dashboards, automação, IA, São Paulo">
     <meta name="author" content="Dharma Labs">
@@ -18,7 +18,7 @@
     <meta property="og:title"
       content="Dharma Labs - Desenvolvimento Web com Propósito">
     <meta property="og:description"
-      content="Transformamos ideias em soluções digitais. Sites, sistemas, apps e automação com IA.">
+      content="Transformamos ideias em soluções digitais. Sites, sistemas, apps e automação.">
     <meta property="og:image"
       content="./assets/images/logos/dharma-labs-main.svg">
     <meta property="og:url" content="https://dharmalabs.com.br">
@@ -355,30 +355,30 @@
 
           <!-- Tagline -->
           <div
-            class="text-accent-400 text-base sm:text-lg lg:text-xl uppercase tracking-widest font-medium mb-2">
+            class="text-accent-400 text-base sm:text-lg lg:text-xl uppercase tracking-widest font-medium mb-6">
             Tecnologia com Propósito
           </div>
 
           <!-- Main Headline -->
           <h1
-            class="text-4xl sm:text-5xl lg:text-7xl font-bold mb-6 leading-tight">
+            class="text-4xl sm:text-5xl lg:text-7xl font-bold mb-8 leading-tight">
             Transformamos Ideias<br class="hidden sm:block">
             <span class="text-accent-400">em Soluções Digitais</span>
           </h1>
 
           <!-- Enhanced Description -->
           <p
-            class="text-xl sm:text-2xl lg:text-3xl sm:mb-4 lg:mb-4 mb-6 opacity-90 leading-relaxed max-w-4xl mx-auto">
-            Desenvolvemos sites, sistemas, dashboards e apps com IA
+            class="text-xl sm:text-2xl lg:text-3xl sm:mb-4 lg:mb-4 mb-8 opacity-90 leading-relaxed max-w-4xl mx-auto">
+            Desenvolvemos sites, sistemas, dashboards e apps
           </p>
           <p
             class="text-lg sm:text-xl lg:text-2xl sm:mb-6 lg:mb-6 mb-8 opacity-80 leading-relaxed max-w-3xl mx-auto">
-            Unindo visão de negócio com execução técnica de excelência
+            Unimos visão de negócio com execução técnica de excelência
           </p>
 
           <!-- Enhanced CTA Buttons -->
           <div
-            class="flex flex-col sm:flex-row gap-4 justify-center items-center sm:mb-2 lg:mb-2 mb-8">
+            class="flex flex-col sm:flex-row gap-4 justify-center items-center mb-8">
             <a href="#contato"
               class="group relative bg-gradient-to-r from-accent-500 to-primary-600 text-white px-10 py-4 rounded-full text-xl font-semibold transition-all duration-300 transform hover:-translate-y-1 hover:shadow-2xl hover:shadow-accent-400/30 w-full sm:w-auto text-center overflow-hidden">
               <i class="fa-solid fa-rocket relative z-10"></i>
@@ -494,24 +494,6 @@
                       incluída</span>
                   </div>
                 </div>
-
-                <div
-                  class="explanation hidden bg-accent-50 p-6 rounded-2xl text-sm text-accent-900 border-l-4 border-accent-500">
-                  <strong class="flex items-center mb-3">
-                    <span class="text-lg mr-2">💡</span>
-                    Como Funciona na Prática:
-                  </strong>
-                  <div class="space-y-3">
-                    <p><strong>Design responsivo:</strong> HTML/CSS que adapta
-                      automaticamente para celular, tablet e desktop</p>
-                    <p><strong>SEO otimizado:</strong> Estrutura semântica, meta
-                      tags e performance que o Google adora</p>
-                    <p><strong>Analytics integrado:</strong> Acompanhe visitas,
-                      conversões e comportamento dos usuários em tempo real</p>
-                    <p><strong>Performance:</strong> Carregamento em menos de 3
-                      segundos, otimização de imagens e código</p>
-                  </div>
-                </div>
               </div>
             </div>
 
@@ -569,28 +551,8 @@
                       robusto</span>
                   </div>
                 </div>
-
-                <div
-                  class="explanation hidden bg-highlight-50 p-6 rounded-2xl text-sm text-highlight-900 border-l-4 border-highlight-500">
-                  <strong class="flex items-center mb-3">
-                    <span class="text-lg mr-2">🔧</span>
-                    Soluções Práticas:
-                  </strong>
-                  <div class="space-y-3">
-                    <p><strong>CRM personalizado:</strong> Gerencie clientes,
-                      vendas e follow-ups em um sistema feito para seu
-                      negócio</p>
-                    <p><strong>Automação:</strong> E-mails automáticos,
-                      relatórios gerados sozinhos, tarefas que se executam</p>
-                    <p><strong>Integrações:</strong> Conecta com WhatsApp,
-                      e-mail, pagamentos e qualquer ferramenta que você usa</p>
-                  </div>
-                </div>
               </div>
             </div>
-
-            <!-- Continue with other service cards... -->
-            <!-- I'll continue with the remaining cards following the same enhanced pattern -->
 
             <!-- Dashboards & Analytics -->
             <div
@@ -644,22 +606,6 @@
                       class="w-2 h-2 bg-accent-500 rounded-full mt-2 flex-shrink-0"></div>
                     <span class="text-gray-700 font-medium">Alertas
                       inteligentes</span>
-                  </div>
-                </div>
-
-                <div
-                  class="explanation hidden bg-accent-50 p-6 rounded-2xl text-sm text-accent-900 border-l-4 border-accent-500">
-                  <strong class="flex items-center mb-3">
-                    <span class="text-lg mr-2">📊</span>
-                    Dados que Falam:
-                  </strong>
-                  <div class="space-y-3">
-                    <p><strong>Visualização:</strong> Gráficos interativos que
-                      transformam números em insights visuais</p>
-                    <p><strong>Tempo real:</strong> Veja vendas, acessos e
-                      métricas atualizando automaticamente</p>
-                    <p><strong>Alertas inteligentes:</strong> Seja notificado
-                      quando metas são atingidas ou problemas aparecem</p>
                   </div>
                 </div>
               </div>
@@ -717,22 +663,6 @@
                       class="w-2 h-2 bg-highlight-500 rounded-full mt-2 flex-shrink-0"></div>
                     <span class="text-gray-700 font-medium">Publicação nas
                       stores</span>
-                  </div>
-                </div>
-
-                <div
-                  class="explanation hidden bg-highlight-50 p-6 rounded-2xl text-sm text-highlight-900 border-l-4 border-highlight-500">
-                  <strong class="flex items-center mb-3">
-                    <span class="text-lg mr-2">📱</span>
-                    App Profissional:
-                  </strong>
-                  <div class="space-y-3">
-                    <p><strong>Flutter:</strong> Um código, dois apps (Android +
-                      iOS) com aparência nativa</p>
-                    <p><strong>Offline:</strong> Funciona sem internet,
-                      sincroniza quando conecta</p>
-                    <p><strong>Notificações:</strong> Engaje usuários com
-                      mensagens direcionadas</p>
                   </div>
                 </div>
               </div>
@@ -796,22 +726,6 @@
                       automatizados</span>
                   </div>
                 </div>
-
-                <div
-                  class="explanation hidden bg-accent-50 p-6 rounded-2xl text-sm text-accent-900 border-l-4 border-accent-500">
-                  <strong class="flex items-center mb-3">
-                    <span class="text-lg mr-2">🔄</span>
-                    Automação Inteligente:
-                  </strong>
-                  <div class="space-y-3">
-                    <p><strong>Integração:</strong> Conectamos seu site com
-                      WhatsApp, email, CRM e qualquer sistema que você usa</p>
-                    <p><strong>Automação:</strong>
-                      "Cliente preenche formulário → email automático + WhatsApp + cadastro no CRM"</p>
-                    <p><strong>APIs personalizadas:</strong> Endpoints para
-                      conectar diferentes sistemas e ferramentas</p>
-                  </div>
-                </div>
               </div>
             </div>
 
@@ -869,22 +783,6 @@
                       contínua</span>
                   </div>
                 </div>
-
-                <div
-                  class="explanation hidden bg-highlight-50 p-6 rounded-2xl text-sm text-highlight-900 border-l-4 border-highlight-500">
-                  <strong class="flex items-center mb-3">
-                    <span class="text-lg mr-2">🛡️</span>
-                    Cuidado Contínuo:
-                  </strong>
-                  <div class="space-y-3">
-                    <p><strong>Monitoramento:</strong> Sistemas que verificam se
-                      tudo está funcionando 24 horas por dia</p>
-                    <p><strong>Backup automático:</strong> Cópias de segurança
-                      diárias, você nunca perde dados</p>
-                    <p><strong>Suporte rápido:</strong> WhatsApp dedicado,
-                      problemas resolvidos em menos de 24h</p>
-                  </div>
-                </div>
               </div>
             </div>
 
@@ -940,22 +838,6 @@
                       class="w-2 h-2 bg-accent-500 rounded-full mt-2 flex-shrink-0"></div>
                     <span class="text-gray-700 font-medium">Suporte
                       técnico</span>
-                  </div>
-                </div>
-
-                <div
-                  class="explanation hidden bg-accent-50 p-6 rounded-2xl text-sm text-accent-900 border-l-4 border-accent-500">
-                  <strong class="flex items-center mb-3">
-                    <span class="text-lg mr-2">📧</span>
-                    Email Corporativo:
-                  </strong>
-                  <div class="space-y-3">
-                    <p><strong>Domínio próprio:</strong> joao@suaempresa.com.br
-                      em vez de joao123@gmail.com</p>
-                    <p><strong>Google Workspace:</strong> Gmail profissional +
-                      Google Drive + Meet integrados</p>
-                    <p><strong>Setup completo:</strong> Configuramos tudo, você
-                      só precisa usar</p>
                   </div>
                 </div>
               </div>
@@ -1199,7 +1081,7 @@
             </div>
             <h3 class="text-2xl font-bold mb-4">Performance Superior</h3>
             <p class="text-primary-200 leading-relaxed">
-              Sites carregam em menos de 3 segundos, otimizados para todos os
+              Sites que carregam rapidamente, otimizados para todos os
               dispositivos
             </p>
           </div>
@@ -1313,9 +1195,9 @@
 
             <a href="https://instagram.com/dharmalabs" target="_blank"
               rel="noopener noreferrer"
-              class="group flex flex-col items-center p-8 bg-white/5 backdrop-blur-sm rounded-2xl hover:bg-highlight-500/10 transition-all duration-300 border border-white/10 hover:border-highlight-400/50 hover:-translate-y-2">
+              class="group flex flex-col items-center p-8 bg-white/5 backdrop-blur-sm rounded-2xl hover:bg-accent-500/10 transition-all duration-300 border border-white/10 hover:border-accent-400/50 hover:-translate-y-2">
               <div
-                class="w-16 h-16 bg-highlight-500/20 rounded-2xl flex items-center justify-center mb-6 group-hover:scale-110 transition-transform duration-300">
+                class="w-16 h-16 bg-accent-500/20 rounded-2xl flex items-center justify-center mb-6 group-hover:scale-110 transition-transform duration-300">
                 <i
                   class="fa-brands fa-instagram text-3xl text-pink-400 group-hover:-rotate-12 transition-transform duration-300"></i>
               </div>
@@ -1323,14 +1205,14 @@
               <p class="text-primary-200 text-center mb-4">Acompanhe nossos
                 projetos</p>
               <span
-                class="text-lg font-medium group-hover:text-highlight-400 transition-colors">@dharmalabs</span>
+                class="text-lg font-medium group-hover:text-accent-400 transition-colors">@dharmalabs</span>
             </a>
 
             <a
               href="https://www.google.com/maps/place/S%C3%A3o+Jos%C3%A9+do+Rio+Preto,+SP/@-20.816511,-49.4650194,12z/data=!3m1!4b1!4m6!3m5!1s0x94bdad614c2df789:0x8f2fb0f070642c09!8m2!3d-20.8127115!4d-49.376521!16s%2Fg%2F1223kj90?entry=ttu&g_ep=EgoyMDI1MDcyMi4wIKXMDSoASAFQAw%3D%3D"
-              class="group flex flex-col items-center p-8 bg-white/5 backdrop-blur-sm rounded-2xl hover:bg-accent-500/10 transition-all duration-300 border border-white/10 hover:border-accent-400/50 hover:-translate-y-2">
+              class="group flex flex-col items-center p-8 bg-white/5 backdrop-blur-sm rounded-2xl hover:bg-highlight-500/10 transition-all duration-300 border border-white/10 hover:border-highlight-400/50 hover:-translate-y-2">
               <div
-                class="w-16 h-16 bg-accent-500/20 rounded-2xl flex items-center justify-center mb-6 group-hover:scale-110 transition-transform duration-300">
+                class="w-16 h-16 bg-highlight-500/20 rounded-2xl flex items-center justify-center mb-6 group-hover:scale-110 transition-transform duration-300">
                 <i
                   class="text-red-400 fa-solid fa-map-pin text-3xl group-hover:-rotate-12 transition-transform duration-300"></i>
               </div>
@@ -1338,7 +1220,7 @@
               <p class="text-primary-200 text-center mb-4">Atendimento
                 presencial</p>
               <span
-                class="text-lg font-medium group-hover:text-accent-400 transition-colors">São
+                class="text-lg font-medium group-hover:text-highlight-400 transition-colors">São
                 José do Rio Preto, SP</span>
             </a>
           </div>
