logo and toggle adjustments

--- a/public/index.html
+++ b/public/index.html
@@ -281,7 +281,7 @@
             id="logo-scroll-top">
             <img src="./assets/images/logos/dharma-labs-main.svg"
               alt="Dharma Labs"
-              class="w-14 h-14" />
+              class="w-20 h-20 -mr-4" />
             <div class="flex flex-col">
               <span class="gradient-text text-xl font-bold">DHARMA</span>
               <span class="text-primary-700 text-sm font-medium">Labs</span>
@@ -347,10 +347,10 @@
         <div
           class="text-center text-white animate-fade-in-up max-w-5xl mx-auto">
           <!-- Logo -->
-          <div class="flex items-center justify-center mb-2 animate-float">
+          <div class="flex items-center justify-center mb-2 animate-float mr-8">
             <img src="./assets/images/logos/dharma-labs-main.svg"
               alt="Dharma Labs"
-              class="w-32 h-32 lg:w-40 lg:h-40 mr-4" />
+              class="w-32 h-32 lg:w-44 lg:h-44 -mr-4" />
             <div class="flex flex-col items-start">
               <span
                 class="gradient-text drop-shadow-2xl text-4xl sm:text-5xl lg:text-7xl font-extrabold">DHARMA</span>
@@ -1261,7 +1261,7 @@
           <div class="flex items-center space-x-3 mb-6 md:mb-0">
             <img src="./assets/images/logos/dharma-labs-main.svg"
               alt="Dharma Labs"
-              class="w-14 h-14" />
+              class="w-20 h-20 -mr-4" />
             <div class="flex flex-col">
               <span class="gradient-text text-2xl font-bold">DHARMA</span>
               <span class="text-primary-200 text-sm">Labs</span>
